--- a/author.html
+++ b/author.html
@@ -6,7 +6,7 @@
 <body>
 
     <h1>Author entry - Sai Teja Gangisetti</h1>
-
+    
 
 <h2>Getting input</h2>
 
@@ -76,6 +76,33 @@ function resolveForm (){
             scoreElement.textContent = `${good} / ${good + oops}`;
         }
     </script>
+
+
+
+<div id="imageContainer">
+    <img id="cityImage" src="Gothenburg.jpg" alt="City 1" width="100" height="100" onclick="selectImage()">
+</div>
+
+<script>
+    var useImage = 1;
+
+    function selectImage() {
+        switch (useImage) {
+            case 1:
+                document.getElementById("cityImage").src = "Istanbul.jpg";
+                useImage = 2;
+                break;
+            case 2:
+                document.getElementById("cityImage").src = "newyork.jpg";
+                useImage = 3;
+                break;
+            case 3:
+                document.getElementById("cityImage").src = "Gothenburg.jpg";
+                useImage = 1;
+                break;
+        }
+    }
+</script>
 </body>
 </html>
 
