--- a/author.html
+++ b/author.html
@@ -39,7 +39,7 @@ function resolveForm (){
     }
 }
 </script>
-
+        <!-- Author Guessing Game -->
 <h1>Author Guessing Game</h1>
     
     <form>
@@ -78,14 +78,14 @@ function resolveForm (){
     </script>
 
 
-
+            <!-- Switch images Script -->
 <div id="imageContainer">
-    <img id="cityImage" src="Gothenburg.jpg" alt="City 1" width="100" height="100" onclick="selectImage()">
+    <img id="cityImage" src="Gothenburg.jpg" 
+        alt="City 1" width="100" height="100" onclick="selectImage()">
 </div>
 
 <script>
     var useImage = 1;
-
     function selectImage() {
         switch (useImage) {
             case 1:
@@ -103,6 +103,9 @@ function resolveForm (){
         }
     }
 </script>
+
+
+
 </body>
 </html>
 
