--- a/cruise.html
+++ b/cruise.html
@@ -24,42 +24,32 @@
 
 <p id="cruiseResult"></p>
 
-<form id="updateForm">
-    <div class="form-group">
-        <label for="days">Enter the number of days</label>
-        <input type="text" id="days" value="7">
-    </div>
-    <div class="form-group">
-        <label for="price">Enter price</label>
-        <input type="text" id="price" value="1000">
-    </div>
-    <button onclick="updateCruise()">Update the cruise</button>
+<form>
+    <label for="days">Enter the number of days</label>
+    <input type="text" id="days" name="days" value="days"><br>
+    <label for="price">Enter price</label>
+    <input type="text" id="price" name="price" value="price"><br>
+    <input type="button" onclick="updateCruise()" value="Update the Cruise">
+    <p id="cruise_update"></p>
 </form>
+<body>
 
-<script>
+<script> 
     var my_cruise = {};
-
-    function selectCruise() {
-        my_cruise = {};
-
-        my_cruise.shared = document.getElementById("sharesCabin").checked;
-        my_cruise.breakfast = document.getElementById("breakfast").checked;
-        my_cruise.pool = document.getElementById("poolPass").checked;
-
-        document.getElementById("cruiseResult").innerHTML = JSON.stringify(my_cruise);
+    function selectCruise() {      
+     my_cruise = {};
+    my_cruise.shared = document.getElementById("sharesCabin").checked;
+    my_cruise.breakfast = document.getElementById("breakfast").checked;
+    my_cruise.pool = document.getElementById("poolPass").checked;
+    document.getElementById("cruiseDetails").innerHTML = "<pre>" + JSON.stringify(my_cruise, null, 2) + "</pre>";
+   }
+    function updateCruise(){
+        const days=document.getElementById('days').value;
+        const price=document.getElementById('price').value;       
+        my_cruise["days"]=days;
+        my_cruise["price"]=price;
+        document.getElementById('cruise_update').textContent=`my_cruise[....]=${JSON.stringify(my_cruise)}`;
     }
-
-    function updateCruise() {
-        var days = document.getElementById("days").value;
-        var price = document.getElementById("price").value;
-
-        my_cruise["days"] = days;
-        my_cruise["price"] = price;
-
-        document.getElementById("cruiseResult").innerHTML = JSON.stringify(my_cruise);
-    }
-</script>
-
-
+    </script> 
 </body>
-</html> 
+</html>
